objects/Contract/fields/Allow_Lunch_Time_on_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Lunch_Time_on_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Lunch Time on Equipment</label>
    <type>Checkbox</type>
</CustomField>