objects/Contract/fields/Annual_CPI_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Annual_CPI_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual CPI Adjustment</label>
    <type>Checkbox</type>
</CustomField>