objects/Contract/fields/Billing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Rule</label>
    <referenceTo>Billing_Rule__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>