objects/Contract/fields/Checking_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Checking_Account_1__c</fullName>
    <label>Checking Account 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>