objects/Contract/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <formula>Account.Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract</label>
    <type>Checkbox</type>
</CustomField>