objects/Contract/fields/Contract_Billing_Project_created_in_EQAI__c.field-meta.xml
<CustomField>
    <fullName>Contract_Billing_Project_created_in_EQAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Billing Project created in EQAI</label>
    <type>Checkbox</type>
</CustomField>