objects/Contract/fields/Contract_Maintenance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Maintenance_Notes__c</fullName>
    <label>“Contract Maintenance Notes</label>
    <type>TextArea</type>
</CustomField>