objects/Contract/fields/Contract_Margin__c.field-meta.xml
<CustomField>
    <fullName>Contract_Margin__c</fullName>
    <label>Contract Margin %</label>
    <type>TextArea</type>
</CustomField>