objects/Contract/fields/Contract_Reporting_Required__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reporting_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Reporting Required”</label>
    <type>Checkbox</type>
</CustomField>