objects/Contract/fields/Contract_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_Notes__c</fullName>
    <label>Contract Review Notes</label>
    <type>TextArea</type>
</CustomField>