objects/Contract/fields/Corporate_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account_Id__c</fullName>
    <formula>Account.Corporate__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Account Id</label>
    <type>Text</type>
</CustomField>