objects/Contract/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>