objects/Contract/fields/EFT_Address_1__c.field-meta.xml
<CustomField>
    <fullName>EFT_Address_1__c</fullName>
    <label>EFT Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>