objects/Contract/fields/EFT_To_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>EFT_To_Bank_Name__c</fullName>
    <label>EFT To Bank Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>