objects/Contract/fields/Energy_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Energy_Insurance__c</fullName>
    <label>Energy Insurance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>