objects/Contract/fields/Federal_State_Contract__c.field-meta.xml
<CustomField>
    <fullName>Federal_State_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Federal/State Contract</label>
    <type>Checkbox</type>
</CustomField>