objects/Contract/fields/Fuel_Surcharge_Pct__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge_Pct__c</fullName>
    <label>Fuel Surcharge %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>