objects/Contract/fields/GSA__c.field-meta.xml
<CustomField>
    <fullName>GSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSA</label>
    <type>Checkbox</type>
</CustomField>