objects/Contract/fields/Has_Lump_Sum_Lines__c.field-meta.xml
<CustomField>
    <fullName>Has_Lump_Sum_Lines__c</fullName>
    <label>Has Bundled Lines</label>
    <summaryFilterItems>
        <field>Contract_Line__c.Category__c</field>
        <operation>equals</operation>
        <value>Lump Sum</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Line__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>