objects/Contract/fields/Legal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Legal_Notes__c</fullName>
    <label>Legal Notes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Liquidated Damages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>