objects/Contract/fields/Liquidated_Damages__c.field-meta.xml
<CustomField>
    <fullName>Liquidated_Damages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liquidated Damages</label>
    <type>Checkbox</type>
</CustomField>