objects/Contract/fields/MBE_WBE_Information__c.field-meta.xml
<CustomField>
    <fullName>MBE_WBE_Information__c</fullName>
    <label>MBE/WBE Information</label>
    <type>TextArea</type>
</CustomField>