objects/Contract/fields/MBE_WBE_Requirementss__c.field-meta.xml
<CustomField>
    <fullName>MBE_WBE_Requirementss__c</fullName>
    <label>MBE/ WBE Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>