objects/Contract/fields/Multiple_Year__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Year__c</fullName>
    <label>Multiple Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year 1</fullName>
            </value>
            <value>
                <fullName>Year 2</fullName>
            </value>
            <value>
                <fullName>Year 3</fullName>
            </value>
            <value>
                <fullName>Year 4</fullName>
            </value>
            <value>
                <fullName>Year 5</fullName>
            </value>
            <value>
                <fullName>Year 6</fullName>
            </value>
            <value>
                <fullName>Year 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>