objects/Contract/fields/Override_Remittance_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Override_Remittance_on_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Remittance on Invoice</label>
    <type>Checkbox</type>
</CustomField>