objects/Contract/fields/PM_Email__c.field-meta.xml
<CustomField>
    <fullName>PM_Email__c</fullName>
    <formula>Account.Salesperson__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Email</label>
    <type>Text</type>
</CustomField>