objects/Contract/fields/Prevailing_Wage__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Wage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevailing Wage</label>
    <type>Checkbox</type>
</CustomField>