objects/Contract/fields/Remittance_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Address_2__c</fullName>
    <label>Remittance Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>