objects/Contract/fields/Remittance_Phone__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Phone__c</fullName>
    <label>Remittance Phone</label>
    <type>Phone</type>
</CustomField>