objects/Contract/fields/Renewal_Requested__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Requested__c</fullName>
    <label>Renewal Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Adjustment Needed/Closed</fullName>
            </value>
            <value>
                <fullName>Adjustments Needed</fullName>
            </value>
            <value>
                <fullName>Sent to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>