objects/Contract/fields/Retainage__c.field-meta.xml
<CustomField>
    <fullName>Retainage__c</fullName>
    <label>Retainage %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>