objects/Contract/fields/RetainageText__c.field-meta.xml
<CustomField>
    <fullName>RetainageText__c</fullName>
    <label>Retainage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>