objects/Contract/fields/Surcharge_Pct__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Pct__c</fullName>
    <label>Surcharge %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>