objects/Contract/fields/Withheld_Until__c.field-meta.xml
<CustomField>
    <fullName>Withheld_Until__c</fullName>
    <label>Withheld Until</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End of Job</fullName>
            </value>
            <value>
                <fullName>End of Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>