objects/Contract/validationRules/Cannot_Create_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_Contract</fullName>
    <active>true</active>
    <description>Use this rule to deny contract creation for non-admin. Contract Manager</description>
    <errorConditionFormula>AND(

  OR(ISNEW() ,
 ISCHANGED( Status )), 
 $Profile.Id  &lt;&gt; "00ef4000000Dizy",
 $User.Contract_Manager__c !=true


)</errorConditionFormula>
    <errorMessage>You do not have sufficient privileges to create/edit a contract.</errorMessage>
</ValidationRule>