objects/Contract/validationRules/Enforce_Contract_Name_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Contract_Name_Length</fullName>
    <active>true</active>
    <description>Enforces Contract name to be 40 characters or less</description>
    <errorConditionFormula>LEN(Name) &gt; 40</errorConditionFormula>
    <errorMessage>Contract Name cannot exceed 40 characters.</errorMessage>
</ValidationRule>