objects/Contract/validationRules/Renewal_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Request</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

Under_Review__c = true,

 ISBLANK(Text(Renewal_Requested__c)) 



)</errorConditionFormula>
    <errorMessage>"Renewal Requested" cannot be blank when "Under Review" is checked</errorMessage>
</ValidationRule>