objects/Contract/validationRules/RetainageEqualsYes.validationRule-meta.xml
<ValidationRule>
    <fullName>RetainageEqualsYes</fullName>
    <active>true</active>
    <description>Retainage % and Withheld Until fields cannot be blank when Retainage value is 'Yes'</description>
    <errorConditionFormula>AND( TEXT(RetainageText__c) = 'Yes',
 $Profile.Id  != '2F00ef4000000Dizy',
 ISBLANK(Retainage__c ))


||

AND( TEXT(RetainageText__c) = 'Yes',
 $Profile.Id  != '2F00ef4000000Dizy',
ISBLANK(TEXT( Withheld_Until__c )))</errorConditionFormula>
    <errorDisplayField>Retainage__c</errorDisplayField>
    <errorMessage>Retainage % and Withheld Until fields cannot be blank when Retainage value is 'Yes'.</errorMessage>
</ValidationRule>