objects/Contract/listViews/All_Active_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Active_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>GSA__c</columns>
    <columns>Surcharge_Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>Customer_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>All Actived Contracts</label>
</ListView>