objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Surcharge_Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>Customer_Number__c</columns>
    <columns>Remittance_Name__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>Internal_Comments__c</columns>
    <columns>Billing_Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>