objects/Contract/listViews/Co_ED.listView-meta.xml
<ListView>
    <fullName>Co_ED</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CSID__c</columns>
    <columns>Customer_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.NAME</field>
        <operation>equals</operation>
        <value>ConED ER</value>
    </filters>
    <label>ConED ER</label>
</ListView>