objects/Contract/listViews/ConEd_Coal_Tar_PO4697193.listView-meta.xml
<ListView>
    <fullName>ConEd_Coal_Tar_PO4697193</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CSID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.NAME</field>
        <operation>contains</operation>
        <value>ConEd Coal Tar PO4697193</value>
    </filters>
    <label>ConEd Coal Tar PO4697193</label>
</ListView>