objects/Contract/listViews/ConEd_Crime_Scene_PO5111030.listView-meta.xml
<ListView>
    <fullName>ConEd_Crime_Scene_PO5111030</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CSID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.NAME</field>
        <operation>contains</operation>
        <value>ConEd</value>
    </filters>
    <label>ConEd</label>
</ListView>