objects/Contract/listViews/ConEd_Flush_Contract_PO_4806.listView-meta.xml
<ListView>
    <fullName>ConEd_Flush_Contract_PO_4806</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CSID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.NAME</field>
        <operation>equals</operation>
        <value>ConEd Flush Contract PO 4806765</value>
    </filters>
    <label>ConEd Flush Contract PO 4806</label>
</ListView>