objects/Contract/listViews/ConEd_SSO_Spill_Pilot_BPO_5460996.listView-meta.xml
<ListView>
    <fullName>ConEd_SSO_Spill_Pilot_BPO_5460996</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CSID__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.NAME</field>
        <operation>equals</operation>
        <value>ConEd SSO Spill Pilot BPO 5460996</value>
    </filters>
    <label>ConEd SSO Spill Pilot BPO 5460996</label>
</ListView>