objects/Contract/listViews/MyActivatedContracts.listView-meta.xml
<ListView>
    <fullName>MyActivatedContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Override_Remittance_on_Invoice__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>My Activated Contracts</label>
</ListView>