objects/Contract/listViews/MyInApprovalContracts.listView-meta.xml
<ListView>
    <fullName>MyInApprovalContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>My In Approval Contracts</label>
</ListView>