objects/Contract/listViews/SXL_Contracts.listView-meta.xml
<ListView>
    <fullName>SXL_Contracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>SALES.ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Sunoco</value>
    </filters>
    <label>SXL Contracts</label>
</ListView>